--- a/stronk/angular.json
+++ b/stronk/angular.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "$schema": "../node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -38,6 +38,10 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": {
+              "base": "../dist",
+              "browser": ""
+            },
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -113,5 +117,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d9c6e7e3-e8da-4208-91bc-b91ee90d28cb"
   }
 }
