--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,43 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-# builds
-dist/
-build/
-publish/
-
-# dependencies
-node_modules/
-
-# reports
-/packages/**/reports/**
-
-# dist
+# Compiled output
 /dist
+/tmp
+/out-tsc
+/bazel-out
 
-# editors
-.idea
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 
-# Misc
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# JUnit test results
-junit.xml
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
-# Build artifacts
-/dist
+# Miscellaneous
+/.angular
+/.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+/testem.log
+/typings
+/__screenshots__/
 
-# Bamboo Agent Files
-**/.electron/*
-
-# Ignore NPMRc
-**/.npmrc
-
-# Operating Systems support files
+# System files
 .DS_Store
-
-# Pact files and logs
-pacts/
-pact/
-
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+Thumbs.db
