--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run: eval $(curl -sSf sh.davidalsh.com/nodejs.sh | sh)
       - run: npm install
-      - run: npm run build
+      - run: npm run build-actions
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
