--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-actions": "ng build --base-href $BASE_HREF",
+    "build-actions": "ng build --base-href $BASE_HREF && cp ./dist/index.html ./dist/404.html",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
