--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "build-actions": "ng build --base-href $BASE_HREF && cp ./dist/index.html ./dist/404.html",
     "watch": "ng build --watch --configuration development",
